--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,19 @@
   <packaging>war</packaging>
 
   <name>hxg-graduation</name>
-  <groupId>hxg-graduation</groupId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <groupId>hxg-graduation</groupId>
   <artifactId>hxg-graduation</artifactId>
   <version>1.0-SNAPSHOT</version>
 
