--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/hxg_bishe
+jdbc.url=jdbc:mysql://127.0.0.1:3306/hxg_bishe?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=root
+jdbc.password=123456
 
 #定义初始连接数
 initialSize=0
