--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,15 +1,15 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/hxg_bishe?useUnicode=true&characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=root
 
-#定义初始连接数
+#\u5B9A\u4E49\u521D\u59CB\u8FDE\u63A5\u6570
 initialSize=0
-#定义最大连接数
+#\u5B9A\u4E49\u6700\u5927\u8FDE\u63A5\u6570
 maxActive=20
-#定义最大空闲
+#\u5B9A\u4E49\u6700\u5927\u7A7A\u95F2
 maxIdle=20
-#定义最小空闲
+#\u5B9A\u4E49\u6700\u5C0F\u7A7A\u95F2
 minIdle=1
-#定义最长等待时间
+#\u5B9A\u4E49\u6700\u957F\u7B49\u5F85\u65F6\u95F4
 maxWait=60000
